# yaclap

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  desktop.ini
.github/workflows/: build-and-test.yaml
fuzzing/: CMakeLists.txt  Dockerfile  README.md  first_fuzz_test.cc  results_2026_01.md  yaclap_fuzz_test.cc
include/: yaclap.hpp
package/: SGrottel.yaclap.nuspec  SGrottel.yaclap.targets  package-release.ps1
src/: CMakeLists.txt  cmdargs.cpp  cmdargs.h  cmdargs.hpp  main.cpp
test/: CMakeLists.txt  calltest.ps1  testAppCmdargs.cpp  testUnmatchedArgs.cpp
